[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
good_lp = "1.7.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
