[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
z3 = { version = "0.12.1", features = ["static-link-z3"] }
