[package]
name = "day25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
nom = "7.1.3"
pathfinding = "4.8.0"
petgraph = "0.6.4"
thiserror = "1.0.51"
